hide currency-pair-info and header item

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -47,71 +47,71 @@
         </a>
       </li>
     </ul>
-    <ul class="menu">
-      <li class="menu__item menu__item--with-submenu" *ngIf="isAuthenticated()">
-        <a class="menu__link" href="">
-          <div class="holdings"><span class="holdings__title">Estimated Holdings</span>
-            <div class="holdings__info">
-              <div class="holdings__info-item"><img class="holdings__info-item-icon" src="../../assets/img/btc-icon-small.svg" alt="btc"> 1.22764</div>
-              <div class="holdings__info-item"><img class="holdings__info-item-icon" src="../../assets/img/dollar-icon-small.svg" alt="dollar"> 43 522 764</div>
-            </div>
-          </div>
-        </a>
-        <div class="submenu">
-          <div class="holdings-mob__pairs holdings-mob__pairs--active">
-            <div class="holdings-mob__pairs-row"><span class="holdings-mob__pairs-row-title">Fiat</span>
-              <div class="holdings-mob__radio-row">
-                <label class="holdings-mob__radio-item"><img class="holdings-mob__radio-img" src="../../assets/img/dollar-icon-small.svg">USD
-                  <input class="holdings-mob__radio-input" type="radio" value="USD" name="radio-input-fiat"><span class="holdings-mob__radio-icon"></span>
-                </label>
-                <label class="holdings-mob__radio-item"><img class="holdings-mob__radio-img" src="../../assets/img/dollar-icon-small.svg">EUR
-                  <input class="holdings-mob__radio-input" type="radio" value="EUR" name="radio-input-fiat"><span class="holdings-mob__radio-icon"></span>
-                </label>
-                <label class="holdings-mob__radio-item"><img class="holdings-mob__radio-img" src="../../assets/img/dollar-icon-small.svg">IDR
-                  <input class="holdings-mob__radio-input" type="radio" value="IDR" name="radio-input-fiat"><span class="holdings-mob__radio-icon"></span>
-                </label>
-              </div>
-            </div>
-            <div class="holdings-mob__pairs-row"><span class="holdings-mob__pairs-row-title">Altcoins</span>
-              <div class="holdings-mob__radio-row">
-                <label class="holdings-mob__radio-item"><img class="holdings-mob__radio-img" src="../../assets/img/btc-icon.svg">BTC
-                  <input class="holdings-mob__radio-input" type="radio" value="BTC" name="radio-input-alt"><span class="holdings-mob__radio-icon"></span>
-                </label>
-                <label class="holdings-mob__radio-item"><img class="holdings-mob__radio-img" src="../../assets/img/eth-icon.svg">ETH
-                  <input class="holdings-mob__radio-input" type="radio" value="ETH" name="radio-input-alt"><span class="holdings-mob__radio-icon"></span>
-                </label>
-                <label class="holdings-mob__radio-item"><img class="holdings-mob__radio-img" src="../../assets/img/zec-icon.svg">ZEC
-                  <input class="holdings-mob__radio-input" type="radio" value="ZEC" name="radio-input-alt"><span class="holdings-mob__radio-icon"></span>
-                </label>
-                <label class="holdings-mob__radio-item"><img class="holdings-mob__radio-img" src="../../assets/img/btc-icon.svg">BTC
-                  <input class="holdings-mob__radio-input" type="radio" value="BTC" name="radio-input-alt"><span class="holdings-mob__radio-icon"></span>
-                </label>
-                <label class="holdings-mob__radio-item"><img class="holdings-mob__radio-img" src="../../assets/img/eth-icon.svg">ETH
-                  <input class="holdings-mob__radio-input" type="radio" value="ETH" name="radio-input-alt"><span class="holdings-mob__radio-icon"></span>
-                </label>
-                <label class="holdings-mob__radio-item"><img class="holdings-mob__radio-img" src="../../assets/img/zec-icon.svg">ZEC
-                  <input class="holdings-mob__radio-input" type="radio" value="ZEC" name="radio-input-alt"><span class="holdings-mob__radio-icon"></span>
-                </label>
-                <label class="holdings-mob__radio-item"><img class="holdings-mob__radio-img" src="../../assets/img/btc-icon.svg">BTC
-                  <input class="holdings-mob__radio-input" type="radio" value="BTC" name="radio-input-alt"><span class="holdings-mob__radio-icon"></span>
-                </label>
-                <label class="holdings-mob__radio-item"><img class="holdings-mob__radio-img" src="../../assets/img/eth-icon.svg">ETH
-                  <input class="holdings-mob__radio-input" type="radio" value="ETH" name="radio-input-alt"><span class="holdings-mob__radio-icon"></span>
-                </label>
-                <label class="holdings-mob__radio-item"><img class="holdings-mob__radio-img" src="../../assets/img/zec-icon.svg">ZEC
-                  <input class="holdings-mob__radio-input" type="radio" value="ZEC" name="radio-input-alt"><span class="holdings-mob__radio-icon"></span>
-                </label>
-              </div>
-            </div>
-            <div class="wrap-input wrap-input--search">
-              <input class="input input--with-icon input--transparent input--bd-dark-blue" id="search-currency" type="text" required=""><span class="wrap-input__icon wrap-input__icon--white"><img src="../../assets/img/search-white.svg"></span>
-              <label class="wrap-input__label wrap-input__label--with-icon wrap-input__label--white">Currency</label>
-              <div class="wrap-input__line wrap-input__line--bd-dark-blue"></div>
-            </div>
-          </div>
-        </div>
-      </li>
-    </ul>
+    <!--<ul class="menu">-->
+      <!--<li class="menu__item menu__item&#45;&#45;with-submenu" *ngIf="isAuthenticated()">-->
+        <!--<a class="menu__link" href="">-->
+          <!--<div class="holdings"><span class="holdings__title">Estimated Holdings</span>-->
+            <!--<div class="holdings__info">-->
+              <!--<div class="holdings__info-item"><img class="holdings__info-item-icon" src="../../assets/img/btc-icon-small.svg" alt="btc"> 1.22764</div>-->
+              <!--<div class="holdings__info-item"><img class="holdings__info-item-icon" src="../../assets/img/dollar-icon-small.svg" alt="dollar"> 43 522 764</div>-->
+            <!--</div>-->
+          <!--</div>-->
+        <!--</a>-->
+        <!--<div class="submenu">-->
+          <!--<div class="holdings-mob__pairs holdings-mob__pairs&#45;&#45;active">-->
+            <!--<div class="holdings-mob__pairs-row"><span class="holdings-mob__pairs-row-title">Fiat</span>-->
+              <!--<div class="holdings-mob__radio-row">-->
+                <!--<label class="holdings-mob__radio-item"><img class="holdings-mob__radio-img" src="../../assets/img/dollar-icon-small.svg">USD-->
+                  <!--<input class="holdings-mob__radio-input" type="radio" value="USD" name="radio-input-fiat"><span class="holdings-mob__radio-icon"></span>-->
+                <!--</label>-->
+                <!--<label class="holdings-mob__radio-item"><img class="holdings-mob__radio-img" src="../../assets/img/dollar-icon-small.svg">EUR-->
+                  <!--<input class="holdings-mob__radio-input" type="radio" value="EUR" name="radio-input-fiat"><span class="holdings-mob__radio-icon"></span>-->
+                <!--</label>-->
+                <!--<label class="holdings-mob__radio-item"><img class="holdings-mob__radio-img" src="../../assets/img/dollar-icon-small.svg">IDR-->
+                  <!--<input class="holdings-mob__radio-input" type="radio" value="IDR" name="radio-input-fiat"><span class="holdings-mob__radio-icon"></span>-->
+                <!--</label>-->
+              <!--</div>-->
+            <!--</div>-->
+            <!--<div class="holdings-mob__pairs-row"><span class="holdings-mob__pairs-row-title">Altcoins</span>-->
+              <!--<div class="holdings-mob__radio-row">-->
+                <!--<label class="holdings-mob__radio-item"><img class="holdings-mob__radio-img" src="../../assets/img/btc-icon.svg">BTC-->
+                  <!--<input class="holdings-mob__radio-input" type="radio" value="BTC" name="radio-input-alt"><span class="holdings-mob__radio-icon"></span>-->
+                <!--</label>-->
+                <!--<label class="holdings-mob__radio-item"><img class="holdings-mob__radio-img" src="../../assets/img/eth-icon.svg">ETH-->
+                  <!--<input class="holdings-mob__radio-input" type="radio" value="ETH" name="radio-input-alt"><span class="holdings-mob__radio-icon"></span>-->
+                <!--</label>-->
+                <!--<label class="holdings-mob__radio-item"><img class="holdings-mob__radio-img" src="../../assets/img/zec-icon.svg">ZEC-->
+                  <!--<input class="holdings-mob__radio-input" type="radio" value="ZEC" name="radio-input-alt"><span class="holdings-mob__radio-icon"></span>-->
+                <!--</label>-->
+                <!--<label class="holdings-mob__radio-item"><img class="holdings-mob__radio-img" src="../../assets/img/btc-icon.svg">BTC-->
+                  <!--<input class="holdings-mob__radio-input" type="radio" value="BTC" name="radio-input-alt"><span class="holdings-mob__radio-icon"></span>-->
+                <!--</label>-->
+                <!--<label class="holdings-mob__radio-item"><img class="holdings-mob__radio-img" src="../../assets/img/eth-icon.svg">ETH-->
+                  <!--<input class="holdings-mob__radio-input" type="radio" value="ETH" name="radio-input-alt"><span class="holdings-mob__radio-icon"></span>-->
+                <!--</label>-->
+                <!--<label class="holdings-mob__radio-item"><img class="holdings-mob__radio-img" src="../../assets/img/zec-icon.svg">ZEC-->
+                  <!--<input class="holdings-mob__radio-input" type="radio" value="ZEC" name="radio-input-alt"><span class="holdings-mob__radio-icon"></span>-->
+                <!--</label>-->
+                <!--<label class="holdings-mob__radio-item"><img class="holdings-mob__radio-img" src="../../assets/img/btc-icon.svg">BTC-->
+                  <!--<input class="holdings-mob__radio-input" type="radio" value="BTC" name="radio-input-alt"><span class="holdings-mob__radio-icon"></span>-->
+                <!--</label>-->
+                <!--<label class="holdings-mob__radio-item"><img class="holdings-mob__radio-img" src="../../assets/img/eth-icon.svg">ETH-->
+                  <!--<input class="holdings-mob__radio-input" type="radio" value="ETH" name="radio-input-alt"><span class="holdings-mob__radio-icon"></span>-->
+                <!--</label>-->
+                <!--<label class="holdings-mob__radio-item"><img class="holdings-mob__radio-img" src="../../assets/img/zec-icon.svg">ZEC-->
+                  <!--<input class="holdings-mob__radio-input" type="radio" value="ZEC" name="radio-input-alt"><span class="holdings-mob__radio-icon"></span>-->
+                <!--</label>-->
+              <!--</div>-->
+            <!--</div>-->
+            <!--<div class="wrap-input wrap-input&#45;&#45;search">-->
+              <!--<input class="input input&#45;&#45;with-icon input&#45;&#45;transparent input&#45;&#45;bd-dark-blue" id="search-currency" type="text" required=""><span class="wrap-input__icon wrap-input__icon&#45;&#45;white"><img src="../../assets/img/search-white.svg"></span>-->
+              <!--<label class="wrap-input__label wrap-input__label&#45;&#45;with-icon wrap-input__label&#45;&#45;white">Currency</label>-->
+              <!--<div class="wrap-input__line wrap-input__line&#45;&#45;bd-dark-blue"></div>-->
+            <!--</div>-->
+          <!--</div>-->
+        <!--</div>-->
+      <!--</li>-->
+    <!--</ul>-->
 
     <div *ngIf="isAuthenticated(); else alien">
       <a class="header__logout" (click)="onLogout()">Log out</a>
