--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,58 +2,58 @@
   <app-header></app-header>
 
   <div class="content">
-    <div class="currency-pair-info">
-      <div class="currency-pair-info__inner">
-        <div class="currency-pair-info__pair">
-          <div class="dropdown currency-pair-info__dropdown">
-            <div class="dropdown__btn">BTC</div>
-            <ul class="dropdown__list">
-              <li class="dropdown__item">ETH</li>
-              <li class="dropdown__item">LTC</li>
-              <li class="dropdown__item">DASH</li>
-            </ul>
-          </div>
-          <div class="currency-pair-info__change-pair"></div>
-          <div class="dropdown currency-pair-info__dropdown">
-            <div class="dropdown__btn">USD</div>
-            <ul class="dropdown__list">
-              <li class="dropdown__item">ETH</li>
-              <li class="dropdown__item">LTC</li>
-              <li class="dropdown__item">DASH</li>
-            </ul>
-          </div>
-        </div>
-        <div class="currency-pair-info__info currency-pair-info__info--up">
-          <div class="currency-pair-info__change">
-            <span>+0.8%</span>
-            <img class="currency-pair-info__arr-up" src="../assets/img/arr-up-green.svg" alt="">
-            <img class="currency-pair-info__arr-down" src="../assets/img/arr-down-red.svg" alt="">
-            <span>(+49,816 USD)</span>
-          </div>
-          <div class="currency-pair-info__price">6 227 USD</div>
-        </div>
-        <div class="currency-pair-info__item">
-          <div class="currency-pair-info__item-title">24h hight</div>
-          <span class="currency-pair-info__item-value">6 327 USD</span>
-        </div>
-        <div class="currency-pair-info__item">
-          <div class="currency-pair-info__item-title">24h low</div>
-          <span class="currency-pair-info__item-value">6 162 USD</span>
-        </div>
-        <div class="currency-pair-info__item">
-          <div class="currency-pair-info__item-title">24h volume</div>
-          <span class="currency-pair-info__item-value">1 943 million  USD</span>
-        </div>
-        <div class="currency-pair-info__item">
-          <div class="currency-pair-info__item-title">You have</div>
-          <div class="currency-pair-info__you-have">
-            <span class="currency-pair-info__item-value">43 522 764  USD</span>
-            <span class="currency-pair-info__vertical-line"></span>
-            <span class="currency-pair-info__item-value">1.22764 BTC</span>
-          </div>
-        </div>
-      </div>
-    </div>
+    <!--<div class="currency-pair-info">-->
+      <!--<div class="currency-pair-info__inner">-->
+        <!--<div class="currency-pair-info__pair">-->
+          <!--<div class="dropdown currency-pair-info__dropdown">-->
+            <!--<div class="dropdown__btn">BTC</div>-->
+            <!--<ul class="dropdown__list">-->
+              <!--<li class="dropdown__item">ETH</li>-->
+              <!--<li class="dropdown__item">LTC</li>-->
+              <!--<li class="dropdown__item">DASH</li>-->
+            <!--</ul>-->
+          <!--</div>-->
+          <!--<div class="currency-pair-info__change-pair"></div>-->
+          <!--<div class="dropdown currency-pair-info__dropdown">-->
+            <!--<div class="dropdown__btn">USD</div>-->
+            <!--<ul class="dropdown__list">-->
+              <!--<li class="dropdown__item">ETH</li>-->
+              <!--<li class="dropdown__item">LTC</li>-->
+              <!--<li class="dropdown__item">DASH</li>-->
+            <!--</ul>-->
+          <!--</div>-->
+        <!--</div>-->
+        <!--<div class="currency-pair-info__info currency-pair-info__info&#45;&#45;up">-->
+          <!--<div class="currency-pair-info__change">-->
+            <!--<span>+0.8%</span>-->
+            <!--<img class="currency-pair-info__arr-up" src="../assets/img/arr-up-green.svg" alt="">-->
+            <!--<img class="currency-pair-info__arr-down" src="../assets/img/arr-down-red.svg" alt="">-->
+            <!--<span>(+49,816 USD)</span>-->
+          <!--</div>-->
+          <!--<div class="currency-pair-info__price">6 227 USD</div>-->
+        <!--</div>-->
+        <!--<div class="currency-pair-info__item">-->
+          <!--<div class="currency-pair-info__item-title">24h hight</div>-->
+          <!--<span class="currency-pair-info__item-value">6 327 USD</span>-->
+        <!--</div>-->
+        <!--<div class="currency-pair-info__item">-->
+          <!--<div class="currency-pair-info__item-title">24h low</div>-->
+          <!--<span class="currency-pair-info__item-value">6 162 USD</span>-->
+        <!--</div>-->
+        <!--<div class="currency-pair-info__item">-->
+          <!--<div class="currency-pair-info__item-title">24h volume</div>-->
+          <!--<span class="currency-pair-info__item-value">1 943 million  USD</span>-->
+        <!--</div>-->
+        <!--<div class="currency-pair-info__item">-->
+          <!--<div class="currency-pair-info__item-title">You have</div>-->
+          <!--<div class="currency-pair-info__you-have">-->
+            <!--<span class="currency-pair-info__item-value">43 522 764  USD</span>-->
+            <!--<span class="currency-pair-info__vertical-line"></span>-->
+            <!--<span class="currency-pair-info__item-value">1.22764 BTC</span>-->
+          <!--</div>-->
+        <!--</div>-->
+      <!--</div>-->
+    <!--</div>-->
     <div class="container container--dashboard">
       <div *ngIf="isTfaPopupOpen">
         <app-two-factor-popup></app-two-factor-popup>
