trading widgets mob done, trading history mob ( need edits), change radio to checkbox-toggler in 2fa

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -17,9 +17,9 @@
       <!--<app-order-book></app-order-book>-->
     <!--</div>-->
 
-    <!--<div class="dashboard__item dashboard__item&#45;&#45;width1">-->
-      <!--<app-trade-history></app-trade-history>-->
-    <!--</div>-->
+    <div class="dashboard__item dashboard__item--width1">
+      <app-trade-history></app-trade-history>
+    </div>
 
     <!--<div class="dashboard__item dashboard__item&#45;&#45;width2">-->
       <!--<app-orders></app-orders>-->
