--- a/src/app/dashboard/trading/buy/buy.component.html
+++ b/src/app/dashboard/trading/buy/buy.component.html
@@ -161,5 +161,8 @@
       </div>
     </div>
   </form>
+  <div class="widget__buy-sell-btn-wrap">
+    <a class="widget__buy-sell-btn widget__buy-sell-btn--single-red">Sell BTC</a>
+  </div>
 </div>
 
