--- a/src/app/dashboard/trading/trading.component.html
+++ b/src/app/dashboard/trading/trading.component.html
@@ -63,9 +63,9 @@
     <button class="tabs__item tabs__item--big tabs__item--active">Buy BTC</button>
     <button class="tabs__item tabs__item--big">Sell BTC</button>
   </div>
-    <app-buy></app-buy>
+    <!--<app-buy></app-buy>-->
 
-    <!--<app-sell></app-sell>-->
+    <app-sell></app-sell>
 </div>
 
 
