--- a/src/app/dashboard/trade-history/trade-history.component.html
+++ b/src/app/dashboard/trade-history/trade-history.component.html
@@ -59,17 +59,10 @@
       </div>
     </div>
   </div>
+  <div class="widget__header--mob">
+    <div class="widget__name-mob">Trade history</div>
+  </div>
   <div class="widget__content">
-    <!--table mob start-->
-    <table class="table widget__table widget__table--mob">
-      <thead>
-      <tr>
-
-      </tr>
-      </thead>
-      <tbody></tbody>
-    </table>
-    <!--table mob end-->
     <!--table start-->
     <div class="widget__table-wrap widget__table-wrap--ml16">
       <table class="table widget__table">
@@ -196,5 +189,128 @@
       </div>
     </div>
     <!--table end-->
+  </div>
+  <div class="widget__content widget__content--mob">
+    <!--table mob start-->
+    <table class="table widget__table widget__table--mob">
+      <thead>
+      <tr>
+        <th class="table__cell-head table__cell-head--tal table__cell-head--p4">Time</th>
+        <th class="table__cell-head table__cell-head--tal table__cell-head--p4">Rate for</th>
+        <th class="table__cell-head table__cell-head--tar table__cell-head--p4"><span>BTC</span></th>
+      </tr>
+      </thead>
+      <tbody class="table__body table__body--none-shadow">
+      <tr class="table__row widget__table-row widget__table-row-hover--red">
+        <td class="table__cell table__cell--tal">
+          17:36:04
+        </td>
+        <td class="table__cell table__cell--tal">
+          <span class="txt-indicate">6561.343830000</span>
+        </td>
+        <td class="table__cell table__cell--tar">
+          <span class="txt-red">0.646970000</span>
+        </td>
+      </tr>
+      <tr style="height: 4px;"></tr>
+      <tr class="table__row widget__table-row widget__table-row-hover--green">
+        <td class="table__cell table__cell--tal">
+          17:36:15
+        </td>
+        <td class="table__cell table__cell--tal">
+          <span class="txt-indicate">6536.154560000</span>
+        </td>
+        <td class="table__cell table__cell--tar">
+          <span class="txt-green">1.305960000</span>
+        </td>
+      </tr>
+      <tr style="height: 4px;"></tr>
+      <tr class="table__row widget__table-row widget__table-row-hover--red">
+        <td class="table__cell table__cell--tal">
+          17:36:45
+        </td>
+        <td class="table__cell table__cell--tal">
+          <span class="txt-indicate">6561.341830000</span>
+        </td>
+        <td class="table__cell table__cell--tar">
+          <span class="txt-red">0.646970000</span>
+        </td>
+      </tr>
+      <tr style="height: 4px;"></tr>
+      <tr class="table__row widget__table-row widget__table-row-hover--green">
+        <td class="table__cell table__cell--tal">
+          17:37:02
+        </td>
+        <td class="table__cell table__cell--tal">
+          <span class="txt-indicate">6561.341830000</span>
+        </td>
+        <td class="table__cell table__cell--tar">
+          <span class="txt-green">0.646970000</span>
+        </td>
+      </tr>
+      <tr style="height: 4px;"></tr>
+      <tr class="table__row widget__table-row widget__table-row-hover--green">
+        <td class="table__cell table__cell--tal">
+          17:37:11
+        </td>
+        <td class="table__cell table__cell--tal">
+          <span class="txt-indicate">6561.341830000</span>
+        </td>
+        <td class="table__cell table__cell--tar">
+          <span class="txt-green">0.646970000</span>
+        </td>
+      </tr>
+      <tr style="height: 4px;"></tr>
+      <tr class="table__row widget__table-row widget__table-row-hover--red ">
+        <td class="table__cell table__cell--tal">
+          17:37:32
+        </td>
+        <td class="table__cell table__cell--tal">
+          <span class="txt-indicate">6561.341830000</span>
+        </td>
+        <td class="table__cell table__cell--tar">
+          <span class="txt-red">0.646970000</span>
+        </td>
+      </tr>
+      <tr style="height: 4px;"></tr>
+      <tr class="table__row widget__table-row widget__table-row-hover--red">
+        <td class="table__cell table__cell--tal">
+          17:38:00
+        </td>
+        <td class="table__cell table__cell--tal">
+          <span class="txt-indicate">6561.341830000</span>
+        </td>
+        <td class="table__cell table__cell--tar">
+          <span class="txt-red">0.646970000</span>
+        </td>
+      </tr>
+      <tr style="height: 4px;"></tr>
+      <tr class="table__row widget__table-row widget__table-row-hover--red">
+        <td class="table__cell table__cell--tal">
+          17:38:14
+        </td>
+        <td class="table__cell table__cell--tal">
+          <span class="txt-indicate">6561.341830000</span>
+        </td>
+        <td class="table__cell table__cell--tar">
+          <span class="txt-red">0.646970000</span>
+        </td>
+      </tr>
+      <tr style="height: 4px;"></tr>
+      <tr class="table__row widget__table-row widget__table-row-hover--green">
+        <td class="table__cell table__cell--tal">
+          17:38:54
+        </td>
+        <td class="table__cell table__cell--tal">
+          <span class="txt-indicate">6561.341830000</span>
+        </td>
+        <td class="table__cell table__cell--tar">
+          <span class="txt-green">0.646970000</span>
+        </td>
+      </tr>
+      <tr style="height: 4px;"></tr>
+      </tbody>
+    </table>
+    <!--table mob end-->
   </div>
 </div>
