hide string 'Choose authentification method'

--- a/src/app/settings/two-factor-authenticaton/two-factor-authentication.component.html
+++ b/src/app/settings/two-factor-authenticaton/two-factor-authentication.component.html
@@ -140,7 +140,7 @@
     </tr>
   </table>
 
-  <div class="subtitle settings__content-subtitle">Choose authentification method</div>
+  <!--<div class="subtitle settings__content-subtitle">Choose authentification method</div>-->
   <div class="row settings__buttons-row">
     <div *ngIf="isLoginGoogleNotificationEnabled || isWithdrawalGoogleNotificationEnabled || isTransferGoogleNotificationEnabled">
         <button class="btn settings__btn" (click)="updateAuthProviderSettings('GOOGLE')">
