trade history mob pl12 and pr12

--- a/src/assets/scss/components/_widget.scss
+++ b/src/assets/scss/components/_widget.scss
@@ -662,6 +662,9 @@
         }
       }
     }
+    &__table-row{
+      background-color: unset;
+    }
     &__scroll {
       background-color: rgba(255, 255, 255, .1);
     }
