--- a/src/app/dashboard/trade-history/trade-history.component.scss
+++ b/src/app/dashboard/trade-history/trade-history.component.scss
@@ -1,5 +1,22 @@
 @import "../../../assets/scss/variables";
 .widget{
+  &__table{
+    td,th{
+      &:first-of-type{
+        padding-left: 12px;
+      }
+      &:last-of-type{
+        padding-right: 12px;
+      }
+    }
+  }
+  &__table-row{
+    &:nth-of-type(odd) {
+      background-color: unset;
+    }
+  }
+
+
   &__table-row-hover{
     &--green{
       &:hover{
@@ -44,6 +61,20 @@
         }
         .txt-indicate{
           color:$red;
+        }
+      }
+    }
+  }
+}
+@media (min-width: 1200px){
+  .widget{
+    &__table{
+      td,th{
+        &:first-of-type{
+          padding-left: 4px;
+        }
+        &:last-of-type{
+          padding-right: 4px;
         }
       }
     }
