--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -5,9 +5,9 @@
       <app-graph></app-graph>
     </div>
 
-    <!--<div class="dashboard__item dashboard__item&#45;&#45;width1">-->
-      <!--<app-markets></app-markets>-->
-    <!--</div>-->
+    <div class="dashboard__item dashboard__item--width1">
+      <app-markets></app-markets>
+    </div>
 
     <div class="dashboard__item dashboard__item--width1">
       <app-trading></app-trading>
