--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -121,10 +121,14 @@
     </ng-template>
 
     <ul class="menu">
-      <li class="menu__item menu__item--with-submenu"><a class="menu__link language" href="#"><img class="language__flag" src="../../assets/img/flag-ru.svg" alt="ru"><span class="language__abbr">ru</span></a>
+      <li class="menu__item menu__item--with-submenu">
+        <a class="menu__link language" href="#">
+          <img class="language__flag" src="../../assets/img/flag-en.svg" alt="ru">
+          <span class="language__abbr">en</span>
+        </a>
         <div class="submenu submenu--language">
           <ul class="menu__list submenu__list submenu__list--language">
-            <li class="submenu__item"><a class="submenu__link" href="#"><img class="language__flag" src="../../assets/img/flag-en.svg" alt=""><span class="language__text">English</span></a></li>
+            <li class="submenu__item"><a class="submenu__link" href="#"><img class="language__flag" src="../../assets/img/flag-ru.svg" alt=""><span class="language__text">Russian</span></a></li>
             <li class="submenu__item"><a class="submenu__link" href="#"><img class="language__flag" src="../../assets/img/flag-cn.svg" alt=""><span class="language__text">Chinese</span></a></li>
             <li class="submenu__item"><a class="submenu__link" href="#"><img class="language__flag" src="../../assets/img/flag-pl.svg" alt=""><span class="language__text">Polish</span></a></li>
             <li class="submenu__item"><a class="submenu__link" href="#"><img class="language__flag" src="../../assets/img/flag-en.svg" alt=""><span class="language__text">Hindi</span></a></li>
