fix layout settings

--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -69,7 +69,7 @@ b {
   display: -webkit-flex;
   display: -ms-flex;
   display: flex;
-  flex-direction: column;
+  //flex-direction: column;
   flex-grow: 1;
   box-sizing: border-box;
   width: 100%;
