--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -54,6 +54,7 @@
         <!--</div>-->
       <!--</div>-->
     <!--</div>-->
+    <!--<div class="container">-->
     <div class="container container--dashboard">
       <div *ngIf="isTfaPopupOpen">
         <app-two-factor-popup></app-two-factor-popup>
