added 2 fa support

--- a/src/app/popups/login-popup/login-popup.component.html
+++ b/src/app/popups/login-popup/login-popup.component.html
@@ -63,6 +63,8 @@
 
         <!--Pin Code -->
         <ng-template #showPinCode>
+          <!--TODO this method displays which method is used-->
+          <h3>{{ twoFaAuthModeMessage }}</h3>
           <div class="wrap-input popup__wrap-input">
             <input
               class="wrap-input__input"
